--- a/1-dynamic-styles/angular.json
+++ b/1-dynamic-styles/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/bootstrap/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [],
